adicionado pestaña de descripciones de la mpu6050

--- a/Paginas Web/page control nuevo/descipciones.html
+++ b/Paginas Web/page control nuevo/descipciones.html
@@ -72,15 +72,15 @@
           <a href="Listado.html">Listado De Activos</a>
         </li>
         <li>
-          <a class="active" href="historialprestamo.html"
-            >Historial De Prestamos</a
-          >
+          <a href="historialprestamo.html">Historial De Prestamos</a>
         </li>
         <li>
           <a href="descargar.html">Decargar Activos</a>
         </li>
         <li>
-          <a href="descipciones.html">Descripcion De Movimiento MPU6050</a>
+          <a href="descipciones.html" class="active"
+            >Descripcion De Movimiento MPU6050</a
+          >
         </li>
       </ul>
     </nav>
