--- a/Paginas Web/page control nuevo/descipciones.html
+++ b/Paginas Web/page control nuevo/descipciones.html
@@ -90,7 +90,7 @@
     </div>
 
     <main>
-      <h2 class="page-heading">Historial De Todos Los Prestamos</h2>
+      <h2 class="page-heading">Historial De Datos De Movimiento MPU6050</h2>
       <button
         id="btnExportar"
         style="
@@ -151,19 +151,26 @@
 
       readList();
       function readList() {
-        var task = firebase.database().ref("/PrestamosEstudiantiles");
+        const db =firebase.database();
+        const ref = db.ref("/tabla");
+
+        /* var task = firebase.database().ref("/tabla");
         task.on("child_added", function (data) {
           var taskValue = data.val();
+          
+        });*/
+        ref.on("child_added", (snapshot, prevChildKey) => {
+          const newPost = snapshot.val();
           var row = table.insertRow(0);
           var cell1 = row.insertCell(0);
           var cell2 = row.insertCell(1);
           var cell3 = row.insertCell(2);
           var cell4 = row.insertCell(3);
 
-          cell1.innerHTML = taskValue.id + "";
-          cell2.innerHTML = taskValue.fecha;
-          cell3.innerHTML = taskValue.tagPrestamo;
-          cell4.innerHTML = taskValue.usuario;
+          cell1.innerHTML = newPost.id; 
+          cell2.innerHTML = newPost.description;
+          cell3.innerHTML = newPost.distanciaCM;
+          cell4.innerHTML = newPost.task;
         });
       }
     </script>
